[RLS] Don't include scroll offset for unclipped absolute bounding boxes of PaintLayers.

Bug: 838811
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I98804e49d7b50d7f192e54806a00669dc843a1ae
Reviewed-on: https://chromium-review.googlesource.com/1048970
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557280}
Former-commit-id: 7e3ce87568c3a2338775ededa458e273605da216